<resources>
    <string name="app_name">Quick notes</string>
    <string name="nextcloud_quicknotes">Nextcloud Quick notes</string>
    <string name="welcome_quicknotes">Welcome to Nextcloud Quick notes</string>
    <string name="choose_account">Choose account</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="save">Save</string>
    <string name="common_yes">Yes</string>
    <string name="common_cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="clean_filter">Clean filter</string>
    <string name="shared_note">Shared note</string>
    <string name="pin_note">Pin note</string>
    <string name="attachment_thumbnail">Attachment thumbnail</string>
    <string name="delete_attachment">Delete attachment</string>
    <string name="change_sort">Change sort</string>
    <string name="change_view">Change view</string>
    <string name="new_note">New note</string>
    <string name="delete_note">Delete note</string>
    <string name="please_wait">Please wait…</string>
    <string name="search_in_all">Search all notes</string>
    <string name="note_saved">Note “%1$s” saved</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_confirm_discard_unsaved_changes_title">Unsaved changes!</string>
    <string name="note_confirm_discard_unsaved_changes_text">You have changes in this note which are not saved yet. Discard changes?</string>
    <string name="all_notes">All notes</string>
    <string name="pinned">Pinned</string>
    <string name="shared_with_others">Shared with others</string>
    <string name="shared_with_you">Shared with you</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="switch_account">Switch account</string>
    <string name="sort_by">Sort by</string>
    <string name="menu_item_sort_by_title_a_z">By title</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_date_updated_first">Updated first</string>
    <string name="must_enter_title">Please enter a title</string>
    <string name="note_color">Note color</string>
    <string name="select_note_color">Select the note color</string>
    <string name="attach_to_note">Attach to note</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="take_a_video">Take a video</string>
    <string name="add_file">Add file</string>
    <string name="sure_want_delete">Are you sure you want to delete the note?</string>
    <string name="need_permission_to_attach">Can not attach new files without permission</string>
    <string name="create_tag">Create Tag “%1$s”</string>
    <string name="enter_tag_name">Enter the name of the tag</string>
    <string name="error_not_installed">We could not determine the version of the server side Quick notes app. Please make sure it is installed and enabled.</string>
    <string name="error_maintenance_mode">The server is currently in maintenance mode. Please contact your administrator or try later again.</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="error_deleting_note">There was an error deleting the note</string>
    <string name="error_saving_note">There was an error saving the note</string>
    <string name="about_versions_title">Versions</string>
    <string name="about_version">You are currently using Nextcloud Quick notes &lt;strong>%1$s&lt;/strong></string>
    <string name="about_nextcloud_version">Your server is currently using Nextcloud &lt;strong>%1$s&lt;/strong></string>
    <string name="about_quicknotes_version">Your server is currently using Quick notes &lt;strong>%1$s&lt;/strong></string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers" translatable="false">Matias De lellis</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source">This project is hosted on GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: &lt;a href="%1$s">%1$s&lt;/a></string>
    <string name="about_translations_title">Translations</string>
    <string name="about_translate">Join the Quicknotes team on Transifex and help us to translate this app: &lt;a href="%1$s">%1$s&lt;/a></string>
    <string name="about_app_license_title">App license</string>
    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
    <string name="about_app_license_button">View license</string>
    <string name="setting_sort_by" translatable="false">SETTING_SORT_BY</string>
    <string name="setting_pinned_first" translatable="false">SETTING_PINNED_FIRST</string>
    <string name="setting_grid_view_enabled" translatable="false">SETTING_GRID_VIEW_ENABLED</string>
    <string name="cache_capabilities_etag" translatable="false">cache_capabilities_etag</string>
    <string name="cache_maintenance_enabled" translatable="false">cache_maintenance_enabled</string>
    <string name="cache_nextcloud_version" translatable="false">cache_nextcloud_version</string>
    <string name="cache_quicknotes_version" translatable="false">cache_quicknotes_version</string>
    <string name="cache_quicknotes_api_version" translatable="false">cache_quicknotes_api_version</string>
    <string name="url_source" translatable="false">https://github.com/matiasdelellis/nextcloud-quicknotes-android</string>
    <string name="url_issues" translatable="false">https://github.com/matiasdelellis/nextcloud-quicknotes-android/issues/new/choose</string>
    <string name="url_license" translatable="false">https://raw.githubusercontent.com/matiasdelellis/nextcloud-quicknotes-android/master/LICENSE</string>
    <string name="url_donate" translatable="false">https://github.com/matiasdelellis/quicknotes/wiki/Donate</string>
    <string name="url_translations" translatable="false">https://www.transifex.com/matias/nextcloud-quicknotes-android/</string>
    <string name="note_actions">Note actions</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Move out of the archive</string>
    <string name="move_to_trash">Move to trash</string>
    <string name="restore">Restore</string>
    <string name="delete_forever">Delete permanently</string>
    <string name="set_reminder">Set reminder</string>
    <string name="edit_reminder">Change reminder</string>
    <string name="remove_reminder">Remove reminder</string>
    <string name="leave_note">Leave this note</string>
    <string name="open_note">Open</string>
    <string name="note_archived">Note archived</string>
    <string name="note_unarchived">Note moved out of the archive</string>
    <string name="note_trashed">Note moved to trash</string>
    <string name="note_restored">Note restored</string>
    <string name="note_left">You left the note</string>
    <string name="sure_want_destroy">This note and everything on it will be gone for good. Delete it anyway?</string>
    <string name="sure_want_leave">You will stop seeing this note, along with your tags, your pin and your reminder on it. Leave it?</string>
    <string name="trash">Trash</string>
    <string name="empty_trash">Empty trash</string>
    <string name="sure_want_empty_trash">Every note in your trash will be gone for good. Empty it?</string>
    <string name="trash_is_empty">There is nothing in the trash</string>
    <string name="archived">Archived</string>
    <string name="with_reminder">Reminders</string>
    <string name="reminder_at">Reminder: %1$s</string>
    <string name="reminder_notified">Reminded: %1$s</string>
    <string name="reminder_set_for">Reminder set for %1$s</string>
    <string name="reminder_removed">Reminder removed</string>
    <string name="select_reminder_date">Pick the day</string>
    <string name="select_reminder_time">Pick the time</string>
    <string name="reminder_must_be_in_the_future">Pick a moment that has not happened yet</string>
    <string name="shares">Sharing</string>
    <string name="shared_by">Shared by %1$s</string>
    <string name="share_with_people">Share with people</string>
    <string name="search_people_and_groups">Search people and groups</string>
    <string name="no_one_else_has_this_note">Nobody else has this note yet</string>
    <string name="no_matches">Nobody found</string>
    <string name="group">Group</string>
    <string name="permission_can_view">Can view</string>
    <string name="permission_can_edit">Can edit</string>
    <string name="permission_can_view_and_reshare">Can view and share</string>
    <string name="permission_can_edit_and_reshare">Can edit and share</string>
    <string name="change_permissions">Change permissions</string>
    <string name="remove_share">Stop sharing</string>
    <string name="shared_with_name">Shared with %1$s</string>
    <string name="note_is_read_only">This note is read only for you</string>
    <string name="conflict_title">Somebody else saved this note</string>
    <string name="conflict_message">This note changed on the server while you were writing. Keeping your version overwrites theirs.</string>
    <string name="conflict_keep_mine">Keep mine</string>
    <string name="conflict_take_theirs">Take theirs</string>
    <string name="error_api_too_old">Your server is running Quick notes %1$s, which is older than this app can talk to. Please update the server app to one publishing api %2$s or newer.</string>
    <string name="error_note_is_read_only">You can read this note, but not change it</string>
    <string name="error_note_changed_elsewhere">This note changed on the server and could not be read back</string>
    <string name="error_setting_reminder">There was an error setting the reminder</string>
    <string name="error_uploading_attachment">There was an error uploading the file</string>
    <string name="error_leaving_note">There was an error leaving the note</string>
    <string name="error_loading_shares">There was an error reading who has this note</string>
    <string name="no_notes_yet">No notes here yet</string>
    <string name="no_notes_found">No notes match your search</string>
    <plurals name="trash_emptied">
        <item quantity="one">%1$d note deleted permanently</item>
        <item quantity="other">%1$d notes deleted permanently</item>
    </plurals>
    <string name="colors">Colors</string>
    <string name="filter_by_color">Show notes of one colour</string>
    <string name="error_note_not_found">That note is not there any more, or is not yours to see</string>
    <string name="open_attachment">Open</string>
    <string name="save_to_downloads">Save to Downloads</string>
    <string name="downloading">Downloading…</string>
    <string name="attachment_saved">Saved “%1$s” to your downloads</string>
    <string name="error_downloading_attachment">There was an error downloading the file</string>
    <string name="error_nothing_opens_this">There is nothing on this phone that opens this kind of file</string>
</resources>