<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Quicknotes Android client application.
 ~
 ~ @copyright Copyright (c) 2020 Matias De lellis <mati86dl@gmail.com>
 ~
 ~ @author Matias De lellis <mati86dl@gmail.com>
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU General Public License as published by
 ~ the Free Software Foundation, either version 3 of the License, or
 ~ (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU General Public License for more details.
 ~
 ~ You should have received a copy of the GNU General Public License
 ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/spacer_1x"
    android:paddingVertical="@dimen/spacer_1x">

    <ImageView
        android:id="@+id/share_icon"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@null"
        android:padding="@dimen/spacer_1hx"
        android:src="@drawable/ic_person"
        app:tint="?android:textColorSecondary" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_1x"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Emma" />

        <TextView
            android:id="@+id/share_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/note_font_size_small"
            tools:text="@string/permission_can_edit" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/share_change_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/change_permissions"
        android:padding="@dimen/spacer_1x"
        android:src="@drawable/ic_more_vert"
        app:tint="?android:textColorSecondary" />

    <ImageButton
        android:id="@+id/share_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/remove_share"
        android:padding="@dimen/spacer_1x"
        android:src="@drawable/ic_baseline_clear_24"
        app:tint="?android:textColorSecondary" />

</LinearLayout>
